deploy/gitops/lilevy-fleet/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lil-evy-node-manager
  namespace: lil-evy-fleet
spec:
  selector:
    app.kubernetes.io/name: lil-evy-node-manager
  ports:
    - name: http
      port: 8006
      targetPort: http
